# WAFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dev/driver/: driver_WAFS.README  run_JGFS_WAFS_GRIB2_0P25.hera  run_JGFS_WAFS_GRIB2_0P25.orion  run_JWAFS_GCIP  (+16 more)
docs/: Release_Notes.md
driver/: driver_WAFS.README  run_JGFS_ATMOS_WAFS_GTG_MAKEUP.dell  run_JGFS_WAFS.cray  run_JGFS_WAFS.dell  run_JGFS_WAFS.hera  run_JGFS_WAFS.orion  run_JGFS_WAFS.wcoss2  run_JGFS_WAFS_BLENDING.cray  run_JGFS_WAFS_BLENDING.dell  run_JGFS_WAFS_BLENDING.hera  run_JGFS_WAFS_BLENDING.orion  run_JGFS_WAFS_BLENDING.wcoss2  run_JGFS_WAFS_BLENDING_0P25.dell  run_JGFS_WAFS_BLENDING_0P25.hera  run_JGFS_WAFS_BLENDING_0P25.orion  run_JGFS_WAFS_BLENDING_0P25.wcoss2  run_JGFS_WAFS_GCIP.cray  run_JGFS_WAFS_GCIP.dell  run_JGFS_WAFS_GCIP.hera  run_JGFS_WAFS_GCIP.orion  run_JGFS_WAFS_GCIP.wcoss2  run_JGFS_WAFS_GRIB2.cray  run_JGFS_WAFS_GRIB2.dell  run_JGFS_WAFS_GRIB2.hera  run_JGFS_WAFS_GRIB2.orion  run_JGFS_WAFS_GRIB2.wcoss2  run_JGFS_WAFS_GRIB2_0P25.dell  run_JGFS_WAFS_GRIB2_0P25.hera  run_JGFS_WAFS_GRIB2_0P25.orion  run_JGFS_WAFS_GRIB2_0P25.wcoss2
ecf/: setup_ecf_links.sh
fix/: awc_wafavn.cfg  gcip_gfs.cfg
jobs/: JGFS_ATMOS_WAFS  JGFS_ATMOS_WAFS_BLENDING  JGFS_ATMOS_WAFS_BLENDING_0P25  JGFS_ATMOS_WAFS_GCIP  JGFS_ATMOS_WAFS_GRIB2  JGFS_ATMOS_WAFS_GRIB2_0P25  JGFS_ATMOS_WAFS_GTG_MAKEUP  JGFS_WAFS  JGFS_WAFS_BLENDING  JGFS_WAFS_BLENDING_0P25  JGFS_WAFS_GCIP  JGFS_WAFS_GRIB2  JGFS_WAFS_GRIB2_0P25  JWAFS_BLENDING_0P25  JWAFS_GCIP  JWAFS_GFS_MANAGER  JWAFS_GRIB  JWAFS_GRIB2  JWAFS_GRIB2_0P25  JWAFS_GRIB2_0P25_BLENDING  JWAFS_GRIB2_1P25  JWAFS_UPP
modulefiles/: wafs_common.lua  wafs_hera.intel.lua  wafs_orion.intel.lua  wafs_orion.lua  wafs_wcoss2.intel.lua  wafs_wcoss2.lua
parm/: wafs_gcip_gfs.cfg
scripts/: exgfs_atmos_wafs_blending.sh  exgfs_atmos_wafs_blending_0p25.sh  exgfs_atmos_wafs_gcip.sh  exgfs_atmos_wafs_grib.sh  exgfs_atmos_wafs_grib2.sh  exgfs_atmos_wafs_grib2_0p25.sh  exgfs_atmos_wafs_gtg_makeup.sh  exgfs_grib_wafs.sh.ecf  exgfs_wafs_blending_0p25.sh  exgfs_wafs_blending_0p25.sh.ecf  exgfs_wafs_gcip.sh  exgfs_wafs_gcip.sh.ecf  exgfs_wafs_grib.sh  exgfs_wafs_grib2.sh  exgfs_wafs_grib2.sh.ecf  exgfs_wafs_grib2_0p25.sh  exgfs_wafs_grib2_0p25.sh.ecf  exwafs_blending.sh.ecf  exwafs_blending_0p25.sh  exwafs_gcip.sh  exwafs_gfs_manager.sh  exwafs_grib.sh  exwafs_grib2.sh  exwafs_grib2_0p25.sh  exwafs_grib2_0p25_blending.sh  exwafs_grib2_1p25.sh  exwafs_upp.sh
sorc/: CMakeLists.txt  Module_wafs_v3.0.1  README.build  build.sh  build_all.sh  build_upp.sh  build_wafs.sh  build_wafs_cmake.sh  build_wafs_dell.sh  build_wafs_hera.sh  build_wafs_theia.sh  checkout_upp.sh  install.sh
sorc/awc_wafavn.fd/: calculus.f90  filters.f90  makedepend.out  makefile  physwaf.f90  waf_cb.f90  waf_config.f90  waf_filter.f90  waf_glob.f90  waf_grib1.f90  waf_grib2.f90  waf_icng.f90  waf_main.f90
sorc/gcip.fd/: algo.f90  derived_fields.f90  gcip.f90  gfs2Dsample.ctl  gfs3Dsample.ctl  goes.ctl  grib1.f90  grib2.f90  gridtemplate.f90  icing.f90  model.f90  pirep.f90  ruc.ctl  sat.ctl  satellite.f90
sorc/wafs_awc_wafavn.fd/: CMakeLists.txt  makefile  waf_grib1.f90  waf_grib2.f90  waf_main.f90
sorc/wafs_blending.fd/: CMakeLists.txt  blending  blending.f  blending.f_org  makefile  makefile_org  prlevel.f_ccs  prvtime.f  write_ndfd_grib2.f90  write_ndfd_grib2.f_org
sorc/wafs_blending_0p25.fd/: CMakeLists.txt  blending.f90  makefile
sorc/wafs_cnvgrib2.fd/: CMakeLists.txt  makefile  pds2pdt.f  pds2pdtens.f  wafs_cnvgrib2.f
sorc/wafs_gcip.fd/: CMakeLists.txt  algo.f90  config.f90  derived_fields.f90  gcip.f90  grib2.f90  gridtemplate.f90  icing.f90  kinds.f90  lightning.f90  makefile  metar.f90  model.f90  pirep.f90  pressure2flight.f90  radar.f90  satellite.f90
sorc/wafs_grib2_0p25.fd/: CMakeLists.txt  makefile  wafsgrib2.f90
sorc/wafs_makewafs.fd/: CMakeLists.txt  makefile
sorc/wafs_setmissing.fd/: CMakeLists.txt  makefile
ush/: build.sh  build_upp.sh  build_wafs.sh  mkwfsgbl.sh  wafs_blending.sh  wafs_blending_0p25.sh  wafs_grib2.regrid.sh  wafs_grib2_0p25_blending.sh  wafs_intdsk.sh  wafs_nceppost.sh  wafs_upp.sh
versions/: build.ver  run.ver
(+119 files in other folders)
